--- a/client/lansettings.html
+++ b/client/lansettings.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="body">
 
     <h1 id="code">code</h1>
     <div id="class">
